manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: isn-poller
  namespace: prod
  labels:
    app: isn-poller
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: isn-poller
  template:
    metadata:
      labels:
        app: isn-poller
      annotations:
        instrumentation.opentelemetry.io/inject-python: "true"
    spec:
      containers:
        - name: isn-poller
          image: apider/isn-poller
          imagePullPolicy: Always
          readinessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
      restartPolicy: Always
      tolerations:
        - key: "node.kubernetes.io/unreachable"
          operator: "Exists"
          effect: "NoExecute"
          tolerationSeconds: 5

---
apiVersion: v1
kind: Service
metadata:
  name: isn-poller-service
  namespace: prod
  labels:
    app: isn-poller
spec:
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  selector:
    app: isn-poller
  type: ClusterIP
  sessionAffinity: None

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: isn-poller-ingress
  namespace: prod
  labels:
    app: isn-poller
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls: # < placing a host in the TLS config will determine what ends up in the cert's subjectAltNames
    - hosts:
        - isn.api.slave.uno
      secretName: isn-poller-ingress-cert # < cert-manager will store the created certificate in this secret.
  rules:
    - host: isn.api.slave.uno
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: isn-poller-service
                port:
                  number: 8000
